--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -32,9 +32,7 @@ jobs:
       - name: set-up environment variables
         run: |
           echo "ARCH=64" >> $GITHUB_ENV
-          echo "CMAKE_A=x64" >> $GITHUB_ENV
-          #echo "ARCH=64" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          #echo "CMAKE_A=x64" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          #echo "CMAKE_A=x64" >> $GITHUB_ENV
       - uses: actions/cache@v2
         id: dep-cache
         with:
@@ -50,7 +48,7 @@ jobs:
         run: mkdir build
       - name: cmake generator
         run: |
-          cmake -DVCPKG_TARGET_TRIPLET=${{ matrix.triplet }} -A ${{ env.CMAKE_A }} -DCMAKE_TOOLCHAIN_FILE=C:\vcpkg\scripts\buildsystems\vcpkg.cmake -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} ..
+          cmake -DVCPKG_TARGET_TRIPLET=${{ matrix.triplet }} -DCMAKE_TOOLCHAIN_FILE=/usr/local/share/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} ..
         working-directory: build
       - name: cmake build
         run: |
