show hidden vertexes

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.organization=raffaello-github
 sonar.projectKey=Raffaello_threedangles
 
-sonar.sources=threedangles,threedangles/src
+sonar.sources=threedangles
 #sonar.tests=threedangles/test
 #sonar.cfamily.build-wrapper-output=build/bw-output
 sonar.cfamily.threads=2
