--- a/threedangles/CMakeLists.txt
+++ b/threedangles/CMakeLists.txt
@@ -13,13 +13,13 @@ if (WIN32)
 endif()
 
 add_executable(threedangles "threedangles.cpp")
-target_sources(threedangles PUBLIC
-    "src/Mat4.cpp"
-    "src/Vec3d.cpp"
-    "src/Triangle.cpp"
-    "src/Mesh.cpp"
+target_sources(threedangles PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Mat4.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Vec3d.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Triangle.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Mesh.cpp
 )
-target_include_directories(threedangles PUBLIC 
+target_include_directories(threedangles PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
