--- a/threedangles/CMakeLists.txt
+++ b/threedangles/CMakeLists.txt
@@ -14,8 +14,8 @@ endif()
 
 add_executable(threedangles "threedangles.cpp")
 target_sources(threedangles PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Mat4x4.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Vec3d.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Mat4.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Triangle.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Mesh.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Engine.cpp
