--- a/threedangles/test/CMakeLists.txt
+++ b/threedangles/test/CMakeLists.txt
@@ -7,39 +7,40 @@ include(CMakeParseArguments)
 macro(macro_test) # ${ARGN} link libraries
     
     set(prefix TEST)
-    set(flags SNAPSHOT DEFAULT SHARELIB)
     set(singleValues EXE FILE)
-    set(multiValues LINKS)
+    set(multiValues FILES)
     
     cmake_parse_arguments(${prefix} "${flags}" "${singleValues}" "${multiValues}" ${ARGN})
     #message("${EXE} - ${FILE} - ${LINKS}")
     #message("EXE: ${TEST_EXE}")
     #message("FILE: ${TEST_FILE}")
-    #message("IS DEFAULT: ${TEST_DEFAULT}")
-    #message("IS SNAPSHOT: ${TEST_SNAPSHOT}")
-    #message("NEED SHARELIB: ${TEST_SHARELIB}")
     #message("LINKS: ${TEST_LINKS}")
-    add_executable (${TEST_EXE} ${TEST_FILE})
-    target_link_libraries(${TEST_EXE} PRIVATE ${TEST_LINKS})
+    add_executable (${TEST_EXE} ${TEST_FILE} ${TEST_FILES})
+    target_include_directories(${TEST_EXE} PUBLIC 
+        ${CMAKE_SOURCE_DIR}/threedangles/src
+    )
+    target_link_libraries(${TEST_EXE} PRIVATE GTest::gtest GTest::gmock)
     add_custom_command(TARGET ${TEST_EXE} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:GTest::gtest_main> $<TARGET_FILE_DIR:${TEST_EXE}>
         COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:GTest::gtest> $<TARGET_FILE_DIR:${TEST_EXE}>
         COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:GTest::gmock> $<TARGET_FILE_DIR:${TEST_EXE}>
     )
-    
-    if(${TEST_SNAPSHOT})
-        add_custom_command(
-            TARGET ${TEST_EXE} POST_BUILD
-                COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/snapshot $<TARGET_FILE_DIR:${TEST_EXE}>/snapshot
-        )
-    endif()
 
-    if(${TEST_SHARELIB})
-        add_custom_command(
-            TARGET ${TEST_EXE} POST_BUILD
-                COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:vga-terminal> $<TARGET_FILE_DIR:${TEST_EXE}>
-        )
-    endif()
-    
     gtest_discover_tests(${TEST_EXE})
 endmacro()
+
+macro_test(
+        EXE TestVec3d
+        FILE "TestVec3d.cpp"
+        FILES ${CMAKE_SOURCE_DIR}/threedangles/src/Vec3d.cpp
+    )
+
+macro_test(
+        EXE TestMat4
+        FILE "TestMat4.cpp"
+        FILES
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Vec3d.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
+    )
+
