--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -139,9 +139,9 @@ jobs:
           . "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           build-wrapper-win-x86-64 --out-dir . cmake --build . --config=Debug
         working-directory: build
-      #- name: CTest
-      #  run: ctest --output-on-failure
-      #  working-directory: build
+      - name: CTest
+        run: ctest --output-on-failure
+        working-directory: build
       - name: Run sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
