--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -58,15 +58,9 @@ jobs:
           . "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars${{ env.ARCH }}.bat"
           cmake --build . --config=${{ matrix.build_type }}
         working-directory: build
-      #- name: CTest
-      #  run: ctest --output-on-failure
-      #  working-directory: build
-      #- name: cmake install
-      #  run: cmake --build . --target install
-      #  working-directory: build
-      #- name: cmake package
-      #  run: cmake --build . --target package
-      #  working-directory: build
+      - name: CTest
+        run: ctest --output-on-failure
+        working-directory: build
  
   sonarcloud:
     name: SonarCloud Analysis (x64-windows, Debug)
