--- a/threedangles/CMakeLists.txt
+++ b/threedangles/CMakeLists.txt
@@ -20,6 +20,8 @@ target_sources(threedangles PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Mesh.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Engine.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/sdl/Screen_SDL.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Cam.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Quat.cpp
 )
 target_include_directories(threedangles PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src
