Clipping class, refactor engine process frame

--- a/threedangles/CMakeLists.txt
+++ b/threedangles/CMakeLists.txt
@@ -23,6 +23,7 @@ target_sources(threedangles PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Cam.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Quat.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Light.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Clipping.cpp
 )
 target_include_directories(threedangles PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src
