--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ if(CMAKE_CUDA_COMPILER)
   #set(CMAKE_CUDA_STANDARD 10.2)
   #set(CMAKE_CUDA_STANDARD_REQUIRED ON)
   set(CMAKE_CUDA_ARCHITECTURES OFF)
+  add_compile_definitions(WITH_CUDA)
 else()
   message(STATUS "No CUDA support")
 endif()
