GPUInfo CUDA 11 REQUIRE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,16 +14,21 @@ include(CTest)
 include(CheckLanguage)
 check_language(CUDA)
 if(CMAKE_CUDA_COMPILER)
-  enable_language(CUDA)
-  find_package(CUDAToolkit REQUIRED 11)
-  set(LIB_CUDA cudart cudart_static)
-  #set(CMAKE_CUDA_STANDARD 10.2)
-  #set(CMAKE_CUDA_STANDARD_REQUIRED ON)
-  set(CMAKE_CUDA_ARCHITECTURES OFF)
-  add_compile_definitions(WITH_CUDA)
+    find_package(CUDAToolkit 11)
+    if (CUDAToolkit_FOUND)
+        message(${CUDAToolkit_FOUND})
+        enable_language(CUDA)
+        #set(LIB_CUDA cudart cudart_static)
+        #set(CMAKE_CUDA_STANDARD 10.2)
+        #set(CMAKE_CUDA_STANDARD_REQUIRED ON)
+        set(CMAKE_CUDA_ARCHITECTURES OFF)
+        add_compile_definitions(WITH_CUDA)
+    endif()
 else()
   message(STATUS "No CUDA support")
 endif()
+
+
 
 # Include sub-projects.
 add_subdirectory ("threedangles")
