SIMD & CUDA instructions (#9)
* [wip] cpuinfo

* cpuid info linux

* add some other assigment operators

* refactor Vec4 with cpu inline function (#10)

* refactor Vec4 with cpu inline function

* linux build fix

* fix linux gcc < 11

* CPUID

* [wip] Vec4 cpu & simd test

* remove __vectorcall

* upate README

* fix linux build#

* code rev

* codacy code rev

* update readme

* code rev

* CUDA gpu_info

* CUDAfix CI

* GPUInfo CUDA 11 REQUIRE

* cuda config update

* disabling Vec4CPU Vec4SSE as not required at the moment, figure out later

--- a/threedangles/test/CMakeLists.txt
+++ b/threedangles/test/CMakeLists.txt
@@ -42,8 +42,6 @@ macro_test(
         FILES
             ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
             ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
-            ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
-        #LINKS SDL2::SDL2 ${LIB_SDL2main} # remove this dependency from Mat4 class -> Triangle class
     )
 
 macro_test(
@@ -51,3 +49,12 @@ macro_test(
     FILE "TestQuat.cpp"
     FILES ${CMAKE_SOURCE_DIR}/threedangles/src/Quat.cpp
 )
+
+macro_test(
+        EXE TestTriangle
+        FILE "TestTriangle.cpp"
+        FILES
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
+    )
