--- a/threedangles/test/CMakeLists.txt
+++ b/threedangles/test/CMakeLists.txt
@@ -57,4 +57,21 @@ macro_test(
             ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
             ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
             ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
+)
+
+
+macro_test(
+        EXE TestEngine
+        FILE "TestEngine.cpp"
+        FILES
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Mesh.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Cam.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Light.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Clipping.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Engine.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/sdl/Screen_SDL.cpp # todo remove
+        LINKS SDL2::SDL2 ${SDL2Main} # This should be removed and use a Screen Stub
     )
