--- a/threedangles/CMakeLists.txt
+++ b/threedangles/CMakeLists.txt
@@ -25,6 +25,7 @@ target_sources(threedangles PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Quat.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Light.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Clipping.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Rasterizer.cpp
 )
 target_include_directories(threedangles PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src
