[wip] normal vertex, gouraud shading

--- a/threedangles/test/CMakeLists.txt
+++ b/threedangles/test/CMakeLists.txt
@@ -8,7 +8,7 @@ macro(macro_test) # ${ARGN} link libraries
     
     set(prefix TEST)
     set(singleValues EXE FILE)
-    set(multiValues FILES LINKS)
+    set(multiValues FILES LINKS FIXTURES)
     
     cmake_parse_arguments(${prefix} "${flags}" "${singleValues}" "${multiValues}" ${ARGN})
     #message("${EXE} - ${FILE} - ${LINKS}")
@@ -26,6 +26,23 @@ macro(macro_test) # ${ARGN} link libraries
         COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:GTest::gtest> $<TARGET_FILE_DIR:${TEST_EXE}>
         COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:GTest::gmock> $<TARGET_FILE_DIR:${TEST_EXE}>
     )
+
+    set(fixtures ${TEST_FIXTURES})
+    list(LENGTH fixtures num_fixtures)
+    unset(fixtures)
+    if(num_fixtures EQUAL 0)
+        message("${TEST_EXE}: No fixtures declared")
+    else()
+        message("${TEST_EXE} Fixtures: ${TEST_FIXTURES}")
+        foreach(fixture_i ${TEST_FIXTURES})
+            message("copy fixture ${fixture_i}")
+            add_custom_command(TARGET ${TEST_EXE} POST_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                        ${CMAKE_CURRENT_SOURCE_DIR}/../objs/${fixture_i}
+                        ${CMAKE_CURRENT_BINARY_DIR}/${fixture_i}
+            )
+        endforeach()
+    endif()
 
     gtest_discover_tests(${TEST_EXE})
 endmacro()
@@ -73,6 +90,22 @@ macro_test(
             ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
             ${CMAKE_SOURCE_DIR}/threedangles/src/Vertex.cpp
             ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
+)
+
+macro_test(
+        EXE TestMesh
+        FILE "TestMesh.cpp"
+        FILES
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Vertex.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Cam.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Clipping.cpp
+            ${CMAKE_SOURCE_DIR}/threedangles/src/Mesh.cpp
+        FIXTURES
+            plain_cube.obj
+            normal_cube.obj
 )
 
 
