--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -42,7 +42,7 @@ jobs:
       - name: vcpkg
         #if: steps.dep-cache.outputs.cache-hit != 'true'
         run: |
-          vcpkg --triplet=${{ matrix.triplet }} install sdl2 sdl2[x11] gtest
+          vcpkg --triplet=${{ matrix.triplet }} install sdl2 sdl2[x11] sdl2-image gtest
       - uses: actions/checkout@v2
       - name: create build dir
         run: mkdir build
