add Tex3 class | fix vertex color clipping. issue#13

--- a/threedangles/CMakeLists.txt
+++ b/threedangles/CMakeLists.txt
@@ -27,6 +27,7 @@ target_sources(threedangles PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Light.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Clipping.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Rasterizer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Tex3.cpp
 
 
     ${CMAKE_CURRENT_SOURCE_DIR}/src/sdl/Screen_SDL.cpp
