--- a/threedangles/test/CMakeLists.txt
+++ b/threedangles/test/CMakeLists.txt
@@ -119,20 +119,20 @@ macro_test(
 )
 
 
-macro_test(
-        EXE TestEngine
-        FILE "TestEngine.cpp"
-        FILES
-            ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
-            ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
-            ${CMAKE_SOURCE_DIR}/threedangles/src/Tex3.cpp
-            ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
-            ${CMAKE_SOURCE_DIR}/threedangles/src/Mesh.cpp
-            ${CMAKE_SOURCE_DIR}/threedangles/src/Cam.cpp
-            ${CMAKE_SOURCE_DIR}/threedangles/src/Light.cpp
-            ${CMAKE_SOURCE_DIR}/threedangles/src/Clipping.cpp
-            ${CMAKE_SOURCE_DIR}/threedangles/src/Engine.cpp
-            ${CMAKE_SOURCE_DIR}/threedangles/src/Rasterizer.cpp
-            ${CMAKE_SOURCE_DIR}/threedangles/src/sdl/Screen_SDL.cpp # @todo remove
-        LINKS SDL2::SDL2 ${SDL2Main} # This should be removed and use a Screen Stub
-    )
+#macro_test(
+#        EXE TestEngine
+#        FILE "TestEngine.cpp"
+#        FILES
+#            ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
+#            ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
+#            ${CMAKE_SOURCE_DIR}/threedangles/src/Tex3.cpp
+#            ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
+#            ${CMAKE_SOURCE_DIR}/threedangles/src/Mesh.cpp
+#            ${CMAKE_SOURCE_DIR}/threedangles/src/Cam.cpp
+#            ${CMAKE_SOURCE_DIR}/threedangles/src/Light.cpp
+#            ${CMAKE_SOURCE_DIR}/threedangles/src/Clipping.cpp
+#            ${CMAKE_SOURCE_DIR}/threedangles/src/Engine.cpp
+#            ${CMAKE_SOURCE_DIR}/threedangles/src/Rasterizer.cpp
+#            ${CMAKE_SOURCE_DIR}/threedangles/src/sdl/Screen_SDL.cpp # @todo remove
+#        LINKS SDL2::SDL2 ${SDL2Main} # This should be removed and use a Screen Stub
+#    )
