--- a/threedangles/examples/CMakeLists.txt
+++ b/threedangles/examples/CMakeLists.txt
@@ -37,46 +37,13 @@ endmacro()
 macro_example(
     EXE "vertex-coloring"
     FILE "vertex-coloring.cpp"
-    FILES 
-        ${CMAKE_SOURCE_DIR}/threedangles/src/CPUID.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Tex3.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Vertex.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Mesh.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Engine.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/sdl/Screen_SDL.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Cam.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Quat.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Light.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Clipping.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Rasterizer.cpp
-    LINKS ${LIB_SDL2main} SDL2::SDL2
+    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 macro_example(
     EXE "the-cube"
     FILE "the-cube.cpp"
-    FILES 
-        ${CMAKE_SOURCE_DIR}/threedangles/src/CPUID.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Tex3.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Vertex.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Mesh.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Engine.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Cam.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Quat.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Light.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Clipping.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/Rasterizer.cpp
-        
-        ${CMAKE_SOURCE_DIR}/threedangles/src/sdl/Screen_SDL.cpp
-        ${CMAKE_SOURCE_DIR}/threedangles/src/sdl/Image_SDL.cpp
-
-    LINKS ${LIB_SDL2main} SDL2::SDL2 SDL2::SDL2_image
+    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
     FIXTURES
         texture_cube.obj
         wood.png
