--- a/threedangles/test/CMakeLists.txt
+++ b/threedangles/test/CMakeLists.txt
@@ -48,97 +48,60 @@ macro(macro_test) # ${ARGN} link libraries
 endmacro()
 
 macro_test(
-        EXE TestVec4
-        FILE "TestVec4.cpp"
-        #FILES ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
-        LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
-    )
+    EXE TestVec4
+    FILE "TestVec4.cpp"
+    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
+)
 
 macro_test(
-        EXE TestMat4
-        FILE "TestMat4.cpp"
-        #FILES
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
-        LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
-    )
+    EXE TestMat4
+    FILE "TestMat4.cpp"
+    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
+)
 
 macro_test(
     EXE TestQuat
     FILE "TestQuat.cpp"
-    #FILES ${CMAKE_SOURCE_DIR}/threedangles/src/Quat.cpp
     LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 macro_test(
-        EXE TestColor
-        FILE "TestColor.cpp"
-        FILES
-    )
+    EXE TestColor
+    FILE "TestColor.cpp"
+    FILES
+)
 
 macro_test(
     EXE TestTexture
     FILE "TestTex3.cpp"
-    #FILES ${CMAKE_SOURCE_DIR}/threedangles/src/Tex3.cpp
     LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 macro_test(
-        EXE TestVertex
-        FILE "TestVertex.cpp"
-        #FILES
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Tex3.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Vertex.cpp
-        LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
+    EXE TestVertex
+    FILE "TestVertex.cpp"
+    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 
 macro_test(
-        EXE TestTriangle
-        FILE "TestTriangle.cpp"
-        #FILES
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Tex3.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Vertex.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
-        LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
+    EXE TestTriangle
+    FILE "TestTriangle.cpp"
+    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 macro_test(
-        EXE TestMesh
-        FILE "TestMesh.cpp"
-        #FILES
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Tex3.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Vertex.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Cam.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Clipping.cpp
-        #    ${CMAKE_SOURCE_DIR}/threedangles/src/Mesh.cpp
-        FIXTURES
-            plain_cube.obj
-            normal_cube.obj
-        LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
+    EXE TestMesh
+    FILE "TestMesh.cpp"
+    FIXTURES
+        plain_cube.obj
+        normal_cube.obj
+    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 
-#macro_test(
-#        EXE TestEngine
-#        FILE "TestEngine.cpp"
-#        FILES
-#            ${CMAKE_SOURCE_DIR}/threedangles/src/Mat4.cpp
-#            ${CMAKE_SOURCE_DIR}/threedangles/src/Vec4.cpp
-#            ${CMAKE_SOURCE_DIR}/threedangles/src/Tex3.cpp
-#            ${CMAKE_SOURCE_DIR}/threedangles/src/Triangle.cpp
-#            ${CMAKE_SOURCE_DIR}/threedangles/src/Mesh.cpp
-#            ${CMAKE_SOURCE_DIR}/threedangles/src/Cam.cpp
-#            ${CMAKE_SOURCE_DIR}/threedangles/src/Light.cpp
-#            ${CMAKE_SOURCE_DIR}/threedangles/src/Clipping.cpp
-#            ${CMAKE_SOURCE_DIR}/threedangles/src/Engine.cpp
-#            ${CMAKE_SOURCE_DIR}/threedangles/src/Rasterizer.cpp
-#            ${CMAKE_SOURCE_DIR}/threedangles/src/sdl/Screen_SDL.cpp # @todo remove
-#        LINKS SDL2::SDL2 ${SDL2Main} # This should be removed and use a Screen Stub
-#    )
+macro_test(
+    EXE TestEngine
+    FILE "TestEngine.cpp"
+    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
+)
